# openstatz

./: .gitignore  2026-rebuild-architecture.md  CHANGELOG.md  NOTICE  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/api/: client.ts  openapi.json  types.ts
app/src/components/: Compare.tsx  Dashboard.tsx  SectionHeader.tsx  SectionNav.tsx  StatGrid.tsx  ThemeToggle.tsx
app/src/components/charts/: BoxPlot.tsx  Distribution.tsx  EoyBars.tsx  MonthlyHeatmap.tsx  TimeSeriesChart.tsx  WeeklyHeatmap.tsx
app/src/components/table/: DataTables.tsx  MetricsTable.tsx
app/src/components/ui/: Card.tsx
app/src/lib/: embedded.ts  format.ts  metrics.ts  parseCsv.ts  sampleData.ts
app/src/theme/: ThemeProvider.tsx  tokens.css
docs/: app.md  example_returns.csv  index.md  parity.md  providers.md
openstatz/: __init__.py  __main__.py  _context.py  _kernels.py  _montecarlo.py  compat.py  plots.py  providers.py  report.html  reports.py  utils.py
openstatz/app/: __init__.py  cli.py  schemas.py  serializers.py  server.py  static_report.py
scripts/: export_openapi.py
tests/: conftest.py  test_app_api.py  test_compat.py  test_context.py  test_extend_pandas.py  test_kernels.py  test_montecarlo.py  test_plots.py  test_providers.py  test_quantstats_shim.py  test_reports.py  test_static_report.py  test_stats.py  test_utils.py
tests/parity/: _corpus.py  _probes.py  generate_fixtures.py  test_parity.py
tests/parity/fixtures/: daily_multi_bench_comp.pkl  daily_single_bench_comp.pkl  daily_single_nobench_comp.pkl  daily_single_nobench_simple.pkl  monthly_single_nobench_comp.pkl
